Stuck on flow images

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ img {
 /* Showcase */
 .showcase {
     min-height: 400px;
-    background: url(https://image.ibb.co/kYJK8x/showcase.jpg);
+    background: url(./img/banner.jpg);
     background-size: cover;
     background-position: center;
     padding: 3rem;
