--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@ body {
     padding: 0.6rem 1.3rem;
     text-decoration: none;
     border: 0;
+    max-width: 100px;
+    max-height: 30px;
 }
 
 img {
@@ -34,12 +36,6 @@ img {
     display: grid;
     grid-gap: 20px;
     grid-gap: .3rem;
-    
-    /*
-    grid-template-columns: repeat(5, auto);
-    grid-auto-rows: repeat(7, auto);
-    grid-auto-flow: dense;
-    */
     grid-template-rows: 1fr;
     grid-template-columns: auto;
     grid-auto-flow: row;
@@ -58,7 +54,7 @@ img {
     grid-gap: 20px;
     padding: 0;
     list-style: none;
-    grid-row: 1 / 7;
+    grid-row: 1 / 9;
     grid-column: 1;
 }
 
@@ -88,7 +84,7 @@ img {
 /* Showcase */
 .showcase {
     min-height: 400px;
-    background: url(./img/banner.jpg);
+    background: url(./img/banner1.jpg);
     background-size: cover;
     background-position: center;
     padding: 3rem;
@@ -98,24 +94,25 @@ img {
     box-shadow: var(--shadow);
     grid-row: 1 / 3;
     grid-column: 2 / 5;
+    grid-auto-flow: column;
 }
 
 .showcase h1 {
     font-size: 4rem;
     margin-bottom: 0;
-    color: var(--light);
+    color: var(--dark);
 }
 
 .showcase p {
     font-size: 1.3rem;
     margin-top: 0;
-    color: var(--light);
+    color: var(--dark);
+    font-weight: bold;
 }
 
 /* Top Box */
 .top-box {
     background: var(--primary);
-    display: grid;
     align-items: center;
     justify-items: center;
     box-shadow: var(--shadow);
@@ -136,11 +133,25 @@ img {
     grid-column: 5;
 }
 
-/* Boxes */
-.boxes {
+/* Activity */
+.activity {
+    display: grid;
+    grid-row: 3;
+    grid-auto-flow: column;
+    grid-column: 2 / 6;
+}
+
+.activity h2 {
     display: grid;
     grid-gap: 20px;
     grid-row: 3;
+    grid-column: 2 / 6;
+}
+
+.boxes {
+    display: grid;
+    grid-gap: 20px;
+    grid-row: 4;
     grid-auto-flow: column;
     grid-column: 2 / 6;
 }
@@ -148,7 +159,7 @@ img {
 .box {
     background: var(--primary);
     text-align: center;
-    padding: 1.5rem 2rem;
+    padding: 3rem 2rem;
     box-shadow: var(--shadow);
 }
 
@@ -158,7 +169,7 @@ img {
     box-shadow: var(--shadow);
     display: grid;
     grid-gap: 30px;
-    grid-row: 4;
+    grid-row: 5;
     grid-column: 2 / 6;
     padding: 3rem;
     grid-auto-flow: column;
@@ -168,7 +179,7 @@ img {
 .portfolio {
     display: grid;
     grid-gap: 20px;
-    grid-row: 5;
+    grid-row: 6;
     grid-column: 2 / 6;
 }
 
@@ -185,7 +196,7 @@ img {
     box-shadow: var(--shadow);
     display: grid;
     grid-gap: 30px;
-    grid-row: 6;
+    grid-row: 7;
     grid-column: 2 / 6;
     padding: 3rem;
     grid-auto-flow: column;
@@ -200,7 +211,7 @@ footer {
     padding: 1rem;
     display: grid;
     grid-gap: 20px;
-    grid-row: 7;
+    grid-row: 8;
     grid-column: 2 / 6;
 }
 
