--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* CSS Variables */
 :root {
-    --primary: #ddd;
+    --primary: #5895e763;
     --dark: #333;
     --light: #fff;
     --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
@@ -13,8 +13,8 @@ html {
 }
 
 body {
-    background: #ccc;
-    margin: 30px 50px;
+    background: radial-gradient(#97bc1580, #4293ff59);
+    margin: 30px;
     line-height: 1.4;
 }
 
@@ -39,14 +39,17 @@ img {
     grid-template-rows: 1fr;
     grid-template-columns: auto;
     grid-auto-flow: row;
+    margin-left: 8%;
 }
 
 /* Navigation */
-
 .main-nav {
     display: grid;
     align-items: center;
     grid-auto-rows: auto;
+    position: fixed;
+    grid-row: 1 / 9;
+    grid-column: 1;
 }
 
 .main-nav ul {
@@ -54,8 +57,7 @@ img {
     grid-gap: 20px;
     padding: 0;
     list-style: none;
-    grid-row: 1 / 9;
-    grid-column: 1;
+    font-weight: bold;
 }
 
 .main-nav a {
@@ -88,30 +90,31 @@ img {
 /* Showcase */
 .showcase {
     min-height: 400px;
-    background: url(./img/banner1.jpg);
+    background: url(./img/bannerFC.jpg);
     background-size: cover;
     background-position: center;
     padding: 3rem;
-    display: grid;
     grid-auto-flow: column;
     justify-content: center;
     box-shadow: var(--shadow);
     grid-row: 1 / 3;
-    grid-column: 2 / 5;
-    grid-auto-flow: column;
+    grid-column: 1 / 5;
 }
 
 .showcase h1 {
     font-size: 4rem;
     margin-bottom: 0;
-    color: var(--dark);
+    color: var(--light);
+    font-weight: bold;
+    text-shadow: 3px 3px 5px black;
 }
 
 .showcase p {
-    font-size: 1.3rem;
+    font-size: 2.5rem;
     margin-top: 0;
-    color: var(--dark);
+    color: var(--light);
     font-weight: bold;
+    text-shadow: 3px 3px 5px black;
 }
 
 /* Top Box */
@@ -143,6 +146,7 @@ img {
 .activity {
     grid-row: 3;
     grid-column: 2 / 6;
+    margin: 2% 0 0 0;
 }
 
 .activity h2 {
@@ -169,15 +173,97 @@ img {
     text-align: center;
     padding: 3rem 2rem;
     box-shadow: var(--shadow);
+    position: relative;
 }
 
-/* Info */
+.overlay {
+    position: absolute;
+    top: 3%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    overflow: hidden;
+    -webkit-transform: scale(0);
+    -ms-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition: .3s ease;
+    transition: .3s ease;
+}
+
+.image {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+.news:hover .overlay {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    box-shadow: var(--shadow);
+    box-shadow: 5px 5px 10px black;
+}
+
+.play:hover .overlay {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    box-shadow: var(--shadow);
+    box-shadow: 5px 5px 10px black;
+}
+
+.share:hover .overlay {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    box-shadow: var(--shadow);
+    box-shadow: 5px 5px 10px black;
+}
+
+.games:hover .overlay {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    box-shadow: var(--shadow);
+    box-shadow: 5px 5px 10px black;
+}
+
+/* About */
+.about {
+    grid-row: 5;
+    grid-column: 2 / 6;
+    margin: 2% 0 0 0;
+}
+
+.about h2 {
+    display: grid;
+    grid-gap: 20px;
+    grid-row: 5;
+    grid-column: 2 / 6;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: bold;
+    margin: 1%;
+}
+
 .info {
     background: var(--primary);
     box-shadow: var(--shadow);
     display: grid;
     grid-gap: 30px;
-    grid-row: 5;
+    grid-row: 6;
     grid-column: 2 / 6;
     padding: 3rem;
     grid-auto-flow: column;
@@ -188,7 +274,7 @@ img {
 .portfolio {
     display: grid;
     grid-gap: 20px;
-    grid-row: 6;
+    grid-row: 7;
     grid-column: 2 / 6;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
@@ -201,10 +287,18 @@ img {
 }
 
 .portfolio img:hover {
-    transform: scale(1.3);
+    transform: scale(1.6);
     opacity: 1;
     transition: all .3s ease-in-out;
     box-shadow: 3px 3px 10px black;
+}
+
+.portfolio h2 {
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    text-align: center;
+    margin-top: 40%;
+    font-size: 3rem;
+    font-weight: bold;
 }
 
 /* Contact */
@@ -213,7 +307,7 @@ img {
     box-shadow: var(--shadow);
     display: grid;
     grid-gap: 30px;
-    grid-row: 7;
+    grid-row: 8;
     grid-column: 2 / 6;
     padding: 3rem;
     grid-auto-flow: column;
@@ -223,14 +317,15 @@ img {
 /* Footer */
 footer {
     margin-top: 2rem;
-    background: var(--dark);
-    color: var(--light);
+    background: #5895e763;
+    color: var(--dark);
     text-align: center;
     padding: 1rem;
     display: grid;
     grid-gap: 20px;
-    grid-row: 8;
+    grid-row: 9;
     grid-column: 2 / 6;
+    font-weight: bold;
 }
 
 /* Media Queries */
