--- a/styles.css
+++ b/styles.css
@@ -108,11 +108,12 @@ img {
 }
 
 .showcase p {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-top: 0;
     color: var(--light);
     font-weight: bold;
     text-shadow: 3px 3px 5px black;
+    margin-top: 5%;
 }
 
 /* Top Box */
@@ -351,23 +352,74 @@ footer {
 }
 
 /* Media Queries */
-@media (max-width: 700px) {
-    .top-container {
-        grid-template-areas:
-            'showcase showcase'
-            'top-box-a top-box-b';
+@media (max-width: 768px) {
+    .wrapper {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto;
+        margin-left: 5%;
     }
 
+    body {
+        margin: 0;
+        line-height: 1;
+    }
+
+    .main-nav {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+    justify-content: center;
+    grid-auto-flow: column;
+    background-color: rgb(208 229 255);
+    text-align: center;
+    width: 100%;
+    box-shadow: 2px 2px 13px black;
+    z-index: 4;
+    }
+
+    .showcase {
+        padding: 0;
+        grid-row: 1 / 3;
+        grid-column: 1 / span 6;
+        margin-top: 30%;
+    }
     .showcase h1 {
         font-size: 2.5rem;
     }
 
+    .showcase p {
+        font-size: 1.5rem;
+        margin-top: 30%;
+    }
+
+    .boxes {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        grid-auto-flow: dense;
+    }
+
+    .top-box-a {
+        grid-row: 3;
+        grid-column: 1 / span 2;
+    }
+
+    .top-box-b {
+        grid-row: 3;
+        grid-column: 3 / span 4;
+    }
+
     .main-nav ul {
         grid-template-columns: 1fr;
+        grid-auto-flow: column;
+        grid-gap: 10px;;
+    }
+
+    .main-nav a {
+        font-size: 1.2rem;
     }
 
     .info {
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        grid-auto-flow: dense;
     }
 
     .info .btn {
@@ -375,13 +427,57 @@ footer {
         text-align: center;
         margin: auto;
     }
-}
 
-@media (max-width: 500px) {
     .top-container {
-        grid-template-areas:
-            'showcase'
-            'top-box-a'
-            'top-box-b';
+        grid-row: 1 / 2;
+        grid-column: 1 / 5;
+    }
+    
+    .activity {
+        grid-row: 4;
+        grid-column: 1 / 5;
+        margin: 10% 0;
+    }
+
+    .activity h2 {
+        grid-row: 4;
+        grid-column: 1 / 5;
+    }
+
+    .about {
+        grid-row: 6;
+        grid-column: 1 / 5;
+    }
+
+    .info {
+        grid-row: 7;
+        grid-column: 1 / 6;
+        padding: 1rem;
+    }
+
+    .portfolio {
+        grid-row: 8;
+        grid-column: 1 / 5;
+    }
+
+    .portfolio h2 {
+        margin: 10% 0 0 0;
+    }
+
+    .contact {
+        grid-row: 9;
+        grid-column: 1 / 5;
+        margin: 10% 0;
+    }
+
+    .contactus {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+        padding: 1rem;
+    }
+
+    footer {
+        grid-row: 10;
+        grid-column: 1 / 5;
+        margin-top: 0;
     }
 }
