--- a/styles.css
+++ b/styles.css
@@ -365,16 +365,16 @@ footer {
     }
 
     .main-nav {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    justify-content: center;
-    grid-auto-flow: column;
-    background-color: rgb(208 229 255);
-    text-align: center;
-    width: 100%;
-    box-shadow: 2px 2px 13px black;
-    z-index: 4;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: auto;
+        justify-content: center;
+        grid-auto-flow: column;
+        background-color: rgb(208 229 255);
+        text-align: center;
+        width: 100%;
+        box-shadow: 2px 2px 13px black;
+        z-index: 4;
     }
 
     .showcase {
@@ -383,6 +383,7 @@ footer {
         grid-column: 1 / span 6;
         margin-top: 30%;
     }
+
     .showcase h1 {
         font-size: 2.5rem;
     }
@@ -410,7 +411,8 @@ footer {
     .main-nav ul {
         grid-template-columns: 1fr;
         grid-auto-flow: column;
-        grid-gap: 10px;;
+        grid-gap: 10px;
+        ;
     }
 
     .main-nav a {
@@ -432,7 +434,7 @@ footer {
         grid-row: 1 / 2;
         grid-column: 1 / 5;
     }
-    
+
     .activity {
         grid-row: 4;
         grid-column: 1 / 5;
