--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ html {
 
 body {
     background: radial-gradient(#97bc1580, #4293ff59);
-    margin: 30px;
     line-height: 1.4;
+    margin: 20px 30px 0 20px;
 }
 
 .btn {
@@ -163,8 +163,9 @@ img {
     display: grid;
     grid-gap: 20px;
     grid-row: 4;
-    grid-auto-flow: column;
+    grid-auto-flow: row;
     grid-column: 2 / 6;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
 
 .box {
@@ -296,7 +297,7 @@ img {
 .portfolio h2 {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
     text-align: center;
-    margin-top: 40%;
+    margin-top: 25%;
     font-size: 3rem;
     font-weight: bold;
 }
@@ -329,7 +330,7 @@ img {
     padding: 3rem;
     grid-auto-flow: dense;
     margin: 0 0 1% 0;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
     text-align: center;
 }
 
@@ -352,11 +353,32 @@ footer {
 }
 
 /* Media Queries */
+@media (max-width: 1200px) {
+    .wrapper {
+        margin-left: 12%;
+    }
+
+    .info {
+        grid-auto-flow: row;
+    }
+
+    .info img {
+        width: 100%;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .contactus {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+}
+
+/* Media Queries */
 @media (max-width: 768px) {
     .wrapper {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto;
-        margin-left: 5%;
+        margin: 20px 30px 0 20px;
     }
 
     body {
@@ -366,7 +388,6 @@ footer {
 
     .main-nav {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
         grid-template-rows: auto;
         justify-content: center;
         grid-auto-flow: column;
@@ -375,13 +396,14 @@ footer {
         width: 100%;
         box-shadow: 2px 2px 13px black;
         z-index: 4;
+        top: 0;
     }
 
     .showcase {
         padding: 0;
         grid-row: 1 / 3;
-        grid-column: 1 / span 6;
-        margin-top: 30%;
+        grid-column: 1 / 5;
+        margin-top: 25%;
     }
 
     .showcase h1 {
@@ -400,12 +422,12 @@ footer {
 
     .top-box-a {
         grid-row: 3;
-        grid-column: 1 / span 2;
+        grid-column: 1 / 2;
     }
 
     .top-box-b {
         grid-row: 3;
-        grid-column: 3 / span 4;
+        grid-column: 3 / 4;
     }
 
     .main-nav ul {
